[project]
name = "mumfordengineering"
version = "0.1.0"
description = "Professional portfolio — mumfordengineering.com"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 120
select = ["E", "F", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
